--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
